maze.lessons.maze.island.IslandMaze.scala.error
Escaper:7: error: value north is not a member of object plm.universe.Direction
    if(!murNord() && getDirection()!=Direction.north)
                                               ^